Fixed table so it enables horizontal scrolling for mobile views

--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -1,5 +1,6 @@
 #store-results-section {
-  overflow: hidden;
+  overflow-x: auto;
+  max-width: 100%;
 }
 
 #store-results-tb {
